Fixing Compiler and Jadoc warnings